--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -88,6 +88,10 @@ on boot
     chmod 0660 /sys/module/bluetooth_power/parameters/power
     chmod 0660 /sys/module/radio_iris_transport/parameters/fmsmd_set
     chmod 0660 /sys/class/rfkill/rfkill0/state
+    chown system system /proc/touchpanel/capacitive_keys_disable
+    chmod 0666 /proc/touchpanel/capacitive_keys_disable
+    chown system system /sys/bus/i2c/devices/3-0038/disable_keys
+    chmod 0666 /sys/bus/i2c/devices/3-0038/disable_keys    
 
     #ASUS_BSP +++ ShawnHuang "Proximity/Light sensor"
     chown system shell /sys/class/sensors/psensor/switch
